stageleft/tests/compile-fail/closure_capture_lifetime.stderr
error[E0309]: the parameter type `I` may not live long enough
 --> tests/compile-fail/closure_capture_lifetime.rs:7:8
  |
3 | fn closure_capture_lifetime_2<'a, I: Copy + Into<u32>>(
  |                               -- the parameter type `I` must be valid for the lifetime `'a` as defined here...
...
7 |     q!(Box::new(move || { v.into() }) as Box<dyn Fn() -> u32 + 'a>)
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `I` will meet its required lifetime bounds
  |
help: consider adding an explicit lifetime bound
  |
3 | fn closure_capture_lifetime_2<'a, I: Copy + Into<u32> + 'a>(
  |                                                       ++++
